--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "express": "^4.21.2",
     "node-telegram-bot-api": "0.66.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
